set width 100% for content to fix mobile overflow issue

--- a/app/static/css/_main.scss
+++ b/app/static/css/_main.scss
@@ -37,5 +37,6 @@
     }
 
     margin: auto;
+    width: 100%;
     max-width: 1000px;
  }
