--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1758,6 +1758,7 @@ ul ul a {
 
 #content {
   margin: auto;
+  width: 100%;
   max-width: 1000px;
 }
 #content img {
